styling fix, input no longer overlap sidebar

--- a/src/pages/Header/Header.module.scss
+++ b/src/pages/Header/Header.module.scss
@@ -2,6 +2,8 @@
 @import "/src/styles/components";
 
 #header {
+  z-index: 1;
+
   position: sticky;
   top: 0;
 
@@ -21,6 +23,14 @@
 
     background-color: transparent;
     border: none;
+
+    &:hover,
+    &:focus {
+      color: lighten($text-color, 12%);
+    }
+  }
+
+  .links a {
 
     &:hover,
     &:focus {
@@ -68,36 +78,32 @@
     }
 
     &>:nth-child(2) {
-      width: clamp(12em,60vw, 30em);
+      width: clamp(12em, 60vw, 30em);
     }
 
     #logoDiv::after {
       display: none;
     }
 
-    #navbar {
-      &:focus-within {
-        .links {
-          position: fixed;
-          top: 0;
-          right: 0;
+    #navbar:focus-within .links {
+      position: fixed;
+      top: 0;
+      right: 0;
 
-          height: 100vh;
-          margin: 0;
-          padding: 2em 4em;
+      height: 100vh;
+      margin: 0;
+      padding: 3em 0;
 
-          display: flex;
-          flex-flow: column;
+      display: flex;
+      flex-flow: column;
 
-          background-color: white;
-          box-shadow:
-            0 0 0 99999px hsla(0, 0%, 50%, 0.5),
-            0 0 6px hsl(0, 0%, 20%);
+      background-color: white;
+      box-shadow:
+        0 0 0 99999px hsla(0, 0%, 50%, 0.5),
+        0 0 6px hsl(0, 0%, 20%);
 
-          &>* {
-            padding: 1.25em 2em;
-          }
-        }
+      &>* {
+        padding: 1.25em 5em;
       }
     }
 
